--- a/bista_purchase/report/purchase_backorder_view.xml
+++ b/bista_purchase/report/purchase_backorder_view.xml
@@ -28,15 +28,37 @@
                                     <span>
                                         <strong>Delivery Address:</strong>
                                     </span>
-                                    <div t-field="o.move_ids_without_package[0].partner_id"
-                                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                    <t t-if="o.move_ids_without_package[0].partner_id.parent_id.name">
+                                        <div>
+                                            <span t-field="o.move_ids_without_package[0].partner_id.parent_id.name"/>
+                                            <br/>
+                                            <span t-field="o.move_ids_without_package[0].partner_id.name"/>
+                                        </div>
+                                        <div t-field="o.move_ids_without_package[0].partner_id"
+                                             t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                    </t>
+                                    <t t-else="">
+                                        <div t-field="o.move_ids_without_package[0].partner_id"
+                                             t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                    </t>
                                 </div>
                                 <div t-if="o.picking_type_id.code != 'internal' and (not o.move_ids_without_package or not o.move_ids_without_package[0].partner_id) and o.picking_type_id.warehouse_id.partner_id">
                                     <span>
                                         <strong>Warehouse Address:</strong>
                                     </span>
-                                    <div t-field="o.picking_type_id.warehouse_id.partner_id"
-                                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                    <t t-if="o.picking_type_id.warehouse_id.partner_id.parent_id.name">
+                                        <div>
+                                            <span t-field="o.picking_type_id.warehouse_id.partner_id.parent_id.name"/>
+                                            <br/>
+                                            <span t-field="o.picking_type_id.warehouse_id.partner_id.name"/>
+                                        </div>
+                                        <div t-field="o.picking_type_id.warehouse_id.partner_id"
+                                             t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                    </t>
+                                    <t t-else="">
+                                        <div t-field="o.picking_type_id.warehouse_id.partner_id"
+                                             t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                    </t>
                                 </div>
                             </div>
                             <div class="col-6" name="div_incoming_address">
@@ -56,12 +78,23 @@
                                     </span>
                                 </div>
                                 <div t-if="partner" name="partner_header">
-                                    <div t-field="partner.commercial_partner_id"
-                                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
-                                    <p t-if="partner.sudo().commercial_partner_id.vat"><t
-                                            t-esc="o.company_id.country_id.vat_label or 'Tax ID'"/>:
-                                        <span t-field="partner.sudo().commercial_partner_id.vat"/>
-                                    </p>
+                                    <t t-if="partner.commercial_partner_id.parent_id.name">
+                                        <div>
+                                            <span t-field="partner.commercial_partner_id.parent_id.name"/>
+                                            <br/>
+                                            <span t-field="partner.commercial_partner_id.name"/>
+                                        </div>
+                                        <div t-field="partner.commercial_partner_id"
+                                             t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                    </t>
+                                    <t t-else="">
+                                        <div t-field="partner.commercial_partner_id"
+                                             t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                        <p t-if="partner.sudo().commercial_partner_id.vat"><t
+                                                t-esc="o.company_id.country_id.vat_label or 'Tax ID'"/>:
+                                            <span t-field="partner.sudo().commercial_partner_id.vat"/>
+                                        </p>
+                                    </t>
                                 </div>
                             </div>
                         </div>
