--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -11,8 +11,19 @@
                     <span>
                         <strong>SUPPLIER</strong>
                     </span>
-                    <div t-field="o.partner_id"
-                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                    <t t-if="o.partner_id.parent_id.name">
+                        <div>
+                            <span t-field="o.partner_id.parent_id.name"/>
+                            <br/>
+                            <span t-field="o.partner_id.name"/>
+                        </div>
+                        <div t-field="o.partner_id"
+                             t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                    </t>
+                    <t t-else="">
+                        <div t-field="o.partner_id"
+                             t-options='{"widget": "contact", "fields": ["address","name","phone"], "no_marker": True, "phone_icons": True}'/>
+                    </t>
                 </div>
                 <t t-set="report_info" class="col-6 text-right mb4">
                     <h3 t-if="o.state in ['draft','sent','purchase','done']">Request for Quotation</h3>
@@ -67,7 +78,7 @@
                         <br/>
                         <t t-if="o.shipping_instructions">
                             <strong>Shipping Instructions :</strong>
-                            <t t-esc="o.shipping_instructions"/>
+                            <t t-esc="o.shipping_instructions.name"/>
                             <br/>
                         </t>
                         <strong>Salesperson:</strong>
@@ -179,7 +190,7 @@
             </t>
         </xpath>
         <xpath expr="//p[@t-field='o.notes']" position="replace">
-            <div class="mt-5 mx-3" t-if="o.notes">
+            <div class="mt-5 mx-3" t-if="o.notes" >
                 <strong>Purchase Order Terms and
                     Conditions
                 </strong>
