--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -10,11 +10,20 @@
             <t t-set="o" t-value="doc.with_context(lang=doc.partner_id.lang)"/>
             <div class="page">
                 <div t-set="address">
-                    <span>
-                        <strong>Customer Detail:</strong>
-                    </span>
-                    <div t-field="doc.partner_id"
-                         t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                    <strong>Customer Detail:</strong>
+                    <t t-if="o.partner_id.parent_id.name">
+                        <div>
+                            <span t-field="o.partner_id.parent_id.name"/>
+                            <br/>
+                            <span t-field="o.partner_id.name"/>
+                        </div>
+                        <div t-field="doc.partner_id"
+                             t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                    </t>
+                    <t t-else="">
+                        <div t-field="doc.partner_id"
+                             t-options='{"widget": "contact", "fields": ["address","name","phone"], "no_marker": True, "phone_icons": True}'/>
+                    </t>
                 </div>
                 <t t-set="report_info"
                    class="col-6 text-right mb4">
@@ -26,12 +35,16 @@
                             <t t-esc="o.name"/>
                         </strong>
                     </h4>
-                    <t t-if="doc.state in ['draft','sent']">
+                    <t t-if="doc.state in ['draft']">
                         <strong>Quotation Date:</strong>
                         <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         <br/>
+                    </t> <t t-if="doc.state in ['order_booked']">
+                        <strong>Booked order date:</strong>
+                        <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
+                        <br/>
                     </t>
-                    <t t-if="doc.state not in ['draft','sent']">
+                    <t t-if="doc.state  in ['sale']">
                         <strong>Order Date:
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                         </strong>
@@ -45,8 +58,19 @@
                             </t>
                             <t t-else="">
                                 <strong>Shipping Details:</strong>
-                                <div t-field="doc.partner_shipping_id" t-options='{"widget": "contact",
-                            "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                <t t-if="o.partner_shipping_id.parent_id.name">
+                                    <div>
+                                        <span t-field="o.partner_shipping_id.parent_id.name"/>
+                                        <br/>
+                                        <span t-field="doc.partner_shipping_id.name"/>
+                                    </div>
+                                    <div t-field="doc.partner_shipping_id"
+                                         t-options='{"widget": "contact", "fields": ["address", "phone"], "no_marker": True, "phone_icons": True}'/>
+                                </t>
+                                <t t-else="">
+                                    <div t-field="doc.partner_shipping_id"
+                                         t-options='{"widget": "contact", "fields": ["address", "name","phone"], "no_marker": True, "phone_icons": True}'/>
+                                </t>
                             </t>
                         </div>
                     </div>
@@ -69,7 +93,7 @@
                             <t t-esc="doc.name"/>
                             <br/>
                         </t>
-                        <t t-if="doc.state in ['draft','sent']">
+                        <t t-if="doc.state in ['draft']">
                             <strong>Quotation Date:</strong>
                             <t t-esc="o.date_order" t-options='{"widget": "date"}'/>
                             <br/>
@@ -127,7 +151,8 @@
                     <th style=" border-collapse: collapse;
                    border: none;" name="th_priceunit" class="text-center">Price
                     </th>
-                    <th name="th_taxes" t-if="line_taxes"  class="text-center" style=" border-collapse: collapse;border: none;">
+                    <th name="th_taxes" t-if="line_taxes" class="text-center"
+                        style=" border-collapse: collapse;border: none;">
                         <span>Taxes</span>
                     </th>
                     <th style=" border-collapse: collapse;
@@ -214,10 +239,10 @@
                         </t>
                     </span>
                 </td>
-                    <td t-if="line_taxes" name="td_taxes" class="text-center" style="border-top: 1px solid black; border-left: none;
+                <td t-if="line_taxes" name="td_taxes" class="text-center" style="border-top: 1px solid black; border-left: none;
                      border-right: none; border-bottom: 1px solid black;">
-                        <span t-esc="', '.join(map(lambda x: (x.name), line.tax_id))"/>
-                    </td>
+                    <span t-esc="', '.join(map(lambda x: (x.name), line.tax_id))"/>
+                </td>
                 <td style="border-top: 1px solid black; border-left: none;
                 border-right: none; border-bottom: 1px solid black;"
                     name="td_subtotal" class="text-right">
@@ -261,31 +286,31 @@
                               t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                     </span>
                 </div>
-                <div class="offset-1 col-5">
-                    <table style="width:250pt; height:140pt; border-left: 1px solid black; border-right: 1px solid black;">
+                <div>
+                    <table style="width:170pt; height:120pt; margin-left:200px;">
                         <tr>
-                            <td style="height:1px; border-left: 1px solid black; border-right: 1px solid black; width:180px; border-top: 1px solid black; color: black; padding-left:10px;"
+                            <td style="height:1px;  width:180px; color: black; padding-left:10px;"
                                 class="text-left">
                                 <strong>Subtotal</strong>
                             </td>
 
-                            <td style="padding-right:8px; border-left: 1px solid black; border-right: 1px solid black; height:1px; border-top: 1px solid black; padding-left:10px; background-color: white;"
+                            <td style="padding-right:8px;height:1px;padding-left:10px; background-color: white; color:black;"
                                 class="text-right">
                                 <span t-field="doc.amount_untaxed"/>
                             </td>
                         </tr>
                         <tr>
-                            <td style="height:1.5px; border-left: 1px solid black; border-right: 1px solid black; border-top: 1px solid black; color: black; padding-left:10px; background-color: white;"
+                            <td style="height:1.5px;background-color: white; padding-left:10px;"
                                 class="text-left">
                                 <strong class="text-right">Tax</strong>
                             </td>
-                            <td style="padding-right:8px; height:1.5px; border-top: 1px solid black;padding-left:10px; background-color: white;"
+                            <td style="padding-right:8px; height:1.5px; color:black; background-color: white;"
                                 class="text-right">
                                 <span t-field="doc.amount_tax"/>
                             </td>
                         </tr>
                         <tr>
-                            <td style="padding-top:5px; border-left: 1px solid black; border-right: 1px solid black; height:1px;border-top: 1px solid black; color: black; padding-left:10px; background-color: white;"
+                            <td style="padding-top:5px;color: black; padding-left:10px; background-color: white;"
                                 class="text-left">
                                 <t t-if="doc.carrier_id">
                                     <strong class="text-left">Shipping</strong>
@@ -298,7 +323,7 @@
                                 </t>
 
                             </td>
-                            <td style="height:1px; border-left: 1px solid black; border-right: 1px solid black; padding-right:8px; padding-bottom:10px; padding-top:5px;border-top: 1px solid black; padding-left:10px; background-color: white;"
+                            <td style="height:1px;padding-right:8px;padding-top:5px; padding-left:10px; background-color: white;"
                                 class="text-right">
                                 <t t-esc="sum([line.price_total for line in doc.order_line if line.is_delivery])"
                                    t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
@@ -306,13 +331,10 @@
                             </td>
                         </tr>
                         <tr>
-                            <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-top:10px; padding-left:10px;
-                                      background: black;color: white; height:1px ;"
-                                class="text-left">
+                            <td style="padding-left:10px;color: black; height:1px ;" class="text-left">
                                 <strong class="border-black o_subtotal;text-right">Total</strong>
                             </td>
-                            <td style="border-top: 1px solid black; padding-left:10px;padding-right:8px; height:1px ; padding-top:10px; background-color: black; color: white;"
-                                class="text-right">
+                            <td style=" height:1px; color: black;" class="text-right">
                                 <span t-field="doc.amount_total"/>
                             </td>
                         </tr>
