[IMP] Resolved Bug #18514

--- a/bista_crm/views/crm_lead_views.xml
+++ b/bista_crm/views/crm_lead_views.xml
@@ -86,7 +86,8 @@
                     <group name="journal_details" string="Journal Details">
                         <group>
                             <field name="journal_customization_ids" options="{'color_field': 'color', 'no_open': True}" widget="many2many_tags"/>
-                            <field name="customization_cost"/>
+                            <field name="currency_id" invisible="1"/>
+                            <field name="customization_cost" />
                             <field name="link_to_art_files" />
                             <field name="artwork_status_id" options="{'no_open': True}"/>
                         </group>
