--- a/bista_customer_credit_limit_nc/views/partner_view.xml
+++ b/bista_customer_credit_limit_nc/views/partner_view.xml
@@ -6,9 +6,13 @@
         <field name="inherit_id" ref="account.view_partner_property_form" />
         <field name="arch" type="xml">
             <field name="property_payment_term_id" position="after">
-                <field name="check_over_credit" readonly="1" />
-                <field name="credit_limit" widget="monetary" readonly="1" attrs="{'invisible': [('check_over_credit','=', False)]}" />
-                <field name="available_credit_limit" readonly="1" attrs="{'invisible': [('check_over_credit','=', False)]}" />
+                <field name="check_over_credit" readonly="1"
+                    attrs="{'invisible': [('is_company', '=', False), ('parent_id', '!=', False)]}" />
+                <field name="credit_limit" widget="monetary" readonly="1" attrs="{'invisible': [('check_over_credit', '=', False)]}" />
+                <field name="available_credit_limit" readonly="1" attrs="{'invisible': [('check_over_credit', '=', False)]}" />
+                <div name="parent_credit_check" colspan="2" attrs="{'invisible': ['|', ('is_company', '=', True), ('parent_id', '=', False)]}">
+                    <p>Credit Limit is managed on <button name="open_commercial_entity" type="object" string="the parent company" class="oe_link"/></p>
+                </div>
             </field>
         </field>
     </record>
