[FIX] Feature #18454 - hide the button of RFQ and PO and add filter according to user rights

--- a/bista_orders_report/wizard/order_status_report_wiz.xml
+++ b/bista_orders_report/wizard/order_status_report_wiz.xml
@@ -66,7 +66,7 @@
 
     <menuitem id="menu_pending_purchase_order_report_new"
               name="Purchase Order Status Report"
-              parent="purchase.menu_procurement_management"
+              parent="purchase.purchase_report_main"
               action="bista_orders_report.action_purchase_order_status_wizard"
               sequence="20"/>
 
