--- a/bista_purchase/wizard/order_reject_view.xml
+++ b/bista_purchase/wizard/order_reject_view.xml
@@ -6,7 +6,7 @@
         <field name="arch" type="xml">
             <form string="Reject Reason">
                 <group>
-                    <field name="note" />
+                    <field name="note" required="1"/>
                 </group>
                 <footer>
                     <button string="Update" name="action_reject_reason" type="object" class="oe_highlight" />
