[IMP] added customer details on customer sale preview
(cherry picked from commit d4d4a97d4a0f93aa0b4e5274d950e4e69fec580e)

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -121,7 +121,7 @@
                         </group>
                         <group>
                             <field name="shipping_account"/>
-                            <field name="shipping_cost" widget="monetary"/>
+                            <field name="so_shipping_cost" widget="monetary"/>
                             <field name="artwork_status_id" />
                             <field name="death_type_id"/>
                             <field name="existing_death_order"/>
