--- a/bista_bigcommerce_extend/views/sale_order_view.xml
+++ b/bista_bigcommerce_extend/views/sale_order_view.xml
@@ -20,6 +20,9 @@
                     </attribute>
                     <attribute name="optional">hide</attribute>
                 </xpath>
+                <xpath expr="//button[@name='exportordertobigcommerce']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
             </field>
         </record>
 
