--- a/bista_sale/views/product_views.xml
+++ b/bista_sale/views/product_views.xml
@@ -10,6 +10,31 @@
                 <xpath expr="//field[@name='uom_po_id']" position="after">
                     <field name="is_never_report"/>
                 </xpath>
+                <xpath expr="//label[@for='list_price']" position="attributes">
+                    <attribute name="string">Cover Price</attribute>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="bista_sale_product_form_view_extend_sku" model="ir.ui.view">
+            <field name="name">bista.sale.product.template.form.view.extend</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='default_code']" position="attributes">
+                    <attribute name="string">SKU</attribute>
+                </xpath>
+            </field>
+        </record>
+
+        <record id="bista_sale_product_normal_form_view_extend_sku" model="ir.ui.view">
+            <field name="name">bista.sale.product.form.view.extend</field>
+            <field name="model">product.product</field>
+            <field name="inherit_id" ref="product.product_normal_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='default_code']" position="attributes">
+                    <attribute name="string">SKU</attribute>
+                </xpath>
             </field>
         </record>
     </data>
