--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -17,7 +17,7 @@
                 <attribute name="optional">show</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="discounted_price" optional="show" readonly="1" />
+                <field name="discounted_price" optional="show" />
                 <field name="saving_amount" optional="show" readonly="1" />
             </xpath>
             <field name="tax_totals_json" position="after">
